# algorithms-project-69

./: '  .gitignore  README.md  pyproject.toml
search_engine/: search_engine.py
search_engine/scripts/: main.py
tests/: test_search_engine.py
tests/test_data/: garbage_patch_NG  garbage_patch_ocean_clean  garbage_patch_spam  garbage_patch_wiki
