[project]
authors = [
    {name = "Sukhorukov Maksim", email = "sukhorukov.maksim95@gmail.com"},
]
requires-python = "<4.0,>=3.12"
name = "algorithms-project"
version = "0.1.0"
description = "Example application"
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[project.scripts]
search_engine = "search_engine.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_engine"]
