[tool.poetry]
authors = ["Sukhorukov Maksim <sukhorukov.maksim95@gmail.com>"]
name = "algorithms-project"
version = "0.1.0"
description = "Example application"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[project.scripts]
search_engine = "search_engine.scripts.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.build.targets.wheel]
packages = ["search_engine"]
