[tool.poetry]
name = "algorithms-project-69"
version = "0.1.0"
description = "Search Engine project"
authors = ["Sukhorukov Maksim"]
readme = "README.md"
packages = [{include = "search_engine"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
